# portfolio

./: README.md
algorithms_and_data_structures/dot_cpp/: CMakeLists.txt  binary_search.cpp
algorithms_and_data_structures/dot_cpp/binary_search/: binary_search.h  binary_search_test.cc
algorithms_and_data_structures/dot_cpp/selection_sort/: selection_sort  selection_sort.cpp  selection_sort.h
algorithms_and_data_structures/dot_py/: binary_search.py
algorithms_and_data_structures/dot_py/binary_search/: binary_search.odp  binary_search.py
algorithms_and_data_structures/dot_py/binary_search/tests/: test_binary_search.py
algorithms_and_data_structures/dot_py/selection_sort/: selection_sort.py
algorithms_and_data_structures/dot_py/selection_sort/tests/: test_selection_sort.py
sql/: README.md
sql/dupe_db/: README.md  schema.sql
